--- a/beats/style.css
+++ b/beats/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url('https://i.imgur.com/b9r5sEL.jpg') bottom center;
   background-size: cover;
 }
 
@@ -38,7 +38,7 @@ body,html {
   box-shadow: 0 0 1rem #ffc600;
 }
 
-kbd {
+span {
   display: block;
   font-size: 4rem;
 }
