--- a/beats/style.css
+++ b/beats/style.css
@@ -31,6 +31,7 @@ body,html {
   color: white;
   background: rgba(0,0,0,0.4);
   text-shadow: 0 0 .5rem black;
+  cursor: pointer;
 }
 
 .playing {
@@ -62,6 +63,7 @@ span {
     font-size: 1.2rem;
     padding: 1rem .5rem;
     width: 8rem;
+
   }
 
   span {
