--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 @font-face{
 	font-family:"Monaco";
 	src: url(fonts/Monaco.ttf);
-}	
+}
+
 body{
 	background: #222;
 	font-family:"Monaco", sans-serif;
@@ -10,8 +11,16 @@ header{
 	display: flex;
 	flex-direction: column;
 	justify-content:  center;
-	height: 100vh;
+	padding-top: 40px;
 }
+header img {
+	width: 200px;
+	border-radius: 50%;
+	margin-bottom: 30px;
+}
+header a:hover {
+	color:#e7c860;
+}	
 .main-container{
 	display: flex;
 	flex-direction: column;
@@ -28,7 +37,6 @@ header{
 	font-size: 40px;
 	margin-bottom: 50px;
 	color:#3df487;
-	
 	text-align: center;
 }
 .logo{
@@ -45,40 +53,9 @@ header{
 }
 p span{
 	color:#e7c860;
-	font-size: 25px;
 }
-.skills{
+.highlight{
 	color:#3df487;
-}
-.button{
-	width:300px;
-	height: 80px;
-	
-	display: flex;
-	border-radius: 10px;
-	font-size: 25px;
-	background-color:#252525;
-	border: none;
-	cursor: pointer;
-	color:#d7d7d7;
-	transition: 0.2s ease-out 0.1s
-
-}
-.button:hover{
-	color:#3df487;
-	background-color: #202020;
-	box-shadow: 0px 0px 5px 0px rgba(19, 19, 19, 1);
-
-}
-.buttons{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	margin-bottom: 60px; 
-	margin-top: 80px;
-}
-.button-contact{
-	margin-left: 30px;
 }
 
 /*-------------- portfolio section---------------*/
@@ -112,152 +89,53 @@ p span{
 /*	margin-bottom: 80px;*/
 	color:#d7d7d7;
 }
-/*-------------- card section ---------------*/
 
-.portfolio-container .content {
+/*-------------- card section ---------------*/
+.card {
+	margin-bottom: 30px;
+}
+.card a {
+	position: relative;
+    width:300px;
+    height: 180px;
+    transition: 0.5s;
+	cursor: pointer;
+	display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+	box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+	overflow: hidden;
+}
+.card a:hover {
+	box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2)
+}
+
+.card h3{
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
-}
-.portfolio-container .card {
-	position: relative;
-    width:300px;
-    height: 200px;
-    transition: 0.5s;
-	cursor: pointer;
-	display: flex;
-    justify-content: center;
-    box-sizing: border-box;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.8)
-}
-
-.portfolio-container .card .face.face1{
-    position: relative;
-    background: #1919192c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    transform: translateY(100px);
-}
-.portfolio-container .card:hover .face.face1{
-    transform: translateY(0);
-    background: #3df487;
-}
-.portfolio-container .card .face.face2{
-    position: relative;
-  
-    display: flex;
-    justify-content: center;
-  
-    box-sizing: border-box;
-   
-    box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-    transform: translateY(-100px);
-}
-.portfolio-container .card:hover .face.face2{
-    transform: translateY(0);
-}
-.portfolio-container .card .face.face1 .content{
-    opacity: 0.5;
-    transition: 0.5s;
-    position: relative;
-}
-.portfolio-container .card .face.face1 .content img{
-	width:100px;
-}
-.portfolio-container .card:hover .face.face1 .content{
-    opacity: 1;
-}
-.portfolio-container .card .face .content h3{
     margin: 10px 0 0;
-    padding: 0;
-    color:#d7d7d7;
-    text-align: center;
+    padding: 20px 0 0;
+	color:#d7d7d7;
+	font-weight: 600;
+	text-align: center;
+	z-index: 99;
 }
-
-.portfolio-container .card .face.face2 .content::after{
-	content: "";
+.content img{
 	position: absolute;
-	z-index: 1;
-	top:0;
+	top: 0;
+	bottom: 0;
+	right: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
-	background:rgba(0,0,0,0.8); 
+	opacity: 0.3;
+	z-index: 2;
 }
-.portfolio-container .card .face.face2 .content img{
-	position: relative;
-	max-width: 300px;
-	height: 100%;
-}
-
-.portfolio-container .card .face .content a{
-    text-decoration: none;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-bottom: 15px 0 0;
-    padding: 10px 20px 10px 20px;
-    border: 1px solid #d7d7d7;
-   color:#3df487;
-   
-    font-weight: 900;
-    display: block;
-    z-index: 2;
-    transition: 0.5s;
-    min-width: 150px;
-    text-align: center;
-}
-.portfolio-container .card .face .content p{
-	font-weight: 400;
-	font-size: 20px;
-}
-.portfolio-container .card .face .content a:hover{
-    background: #191919;
-    color: #d7d7d7;
-}
-
-
 /*-------------- portfolio section finish---------------*/
 
-.links-container{
-	list-style: none;
-	display: flex;
-	margin-bottom: 50px;
 
-}
-.links-container--item{
-	font-size: 25px;
-	color:#d7d7d7;
-	transition: 0.2s ease-out 0.1s
-
-}
-.links-container--item:hover{
-	color:#3df487;
-}
-.links-container--item a{
-	margin-right: 30px;
-}
-.button a{
-	display: block;
-	width: 100%;
-	padding-top: 22px;
-	padding-bottom: 22px;
-}
-a{
-	text-decoration: none;
-	color:#d7d7d7;
-	cursor: pointer;
-	display: inline-block;
-	transition: 0.3s ease-out 0.1s
-}
-a:hover{
-	color:#3df487;
-}
 @media (min-width: 320px) and (max-width: 730px) {
 	.main-container{
 		width:100%;
