--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ p span{
 	opacity: 1;
 }
 .title{
-	font-size: 35px;
+	font-size: 25px;
 	text-align: center;
 /*	margin-bottom: 80px;*/
 	color:#d7d7d7;
@@ -130,6 +130,7 @@ p span{
 	right: 0;
 	left: 0;
 	width: 100%;
+	height: 100%;
 	opacity: 0.3;
 	z-index: 2;
 }
