--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ p span{
 /*-------------- portfolio section---------------*/
 .portfolio{
 	width: 100%;
-	
+	padding-bottom: 30px;
 }
 .portfolio-container{
 	display: flex;
@@ -70,7 +70,7 @@ p span{
 	justify-content: space-around;
 	
 	margin: 0 auto;
-	width: 90%;
+	width: 80%;
 	
 }
 .portfolio-link{
@@ -87,7 +87,7 @@ p span{
 .title{
 	font-size: 25px;
 	text-align: center;
-	margin-bottom: 40px;
+	margin: 40px 0 40px;
 	color:#d7d7d7;
 }
 
@@ -96,101 +96,94 @@ p span{
 	margin-bottom: 30px;
 }
 .card a {
-	position: relative;
-    width:300px;
-    height: 180px;
+	min-height: 100px;
     transition: 0.5s;
 	cursor: pointer;
 	display: flex;
     justify-content: center;
     box-sizing: border-box;
-	box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-	overflow: hidden;
-}
-.card a:hover {
-	box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2)
+	text-decoration: none;
 }
 
-.card h3{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-    margin: 10px 0 0;
-    padding: 20px 0 0;
+.card-description h3{
 	color:#d7d7d7;
 	font-weight: 600;
 	text-align: center;
-	z-index: 99;
+}
+.card-description p {
+	color:#d7d7d7;
+}
+.content {
+	margin-right: 20px;
 }
 .content img{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	opacity: 0.3;
-	z-index: 2;
+	width: 333px;
+	height: 220px;
 }
 /*-------------- portfolio section finish---------------*/
 
+@media only screen and (max-width : 992px) {
+	.main-container{
+		width:100%;
+		margin-bottom: 0px;
+		margin-top: 0px;
+		box-shadow: none;
+	}
+}
 
-@media (min-width: 320px) and (max-width: 730px) {
+@media only screen and (max-width : 762px) {
+	.main-container{
+		width:100%;
+		margin-bottom: 0px;
+		margin-top: 0px;
+		box-shadow: none;
+	}
+	.main-title{
+		font-size: 25px;
+	}
+	.card a {
+		flex-wrap: wrap;
+	}
+	.description{
+		font-size: 16px;
+		padding-right: 50px;
+		padding-left: 50px;
+	}
+	.title {
+		font-size: 20px;
+		margin: 40px 0 20px;
+	}
+	.content {
+		order: 1;
+	}
+}
+
+@media only screen and (max-width : 480px) {
 	.main-container{
 		width:100%;
 		margin-bottom: 0px;
 		margin-top: 0px;
 	}
-	.description{
-		font-size: 19px;
-		line-height: 1.5;
-		padding-right: 15px;
-		padding-left: 15px;
-		text-align: left;
-	}
-	header{
-		height: auto;
-	}
-	a img{
-		width: 280px;
-	}
-	.main-title{
-		font-size: 30px;
+	.description {
+		padding-right: 20px;
+		padding-left: 20px;
 	}
 	.title{
 		font-size: 25px;
+		text-align: center;
+		margin: 40px 0 20px;
+		color:#d7d7d7;
 	}
-	.buttons,
-	.links-container{
-		flex-direction: column;
-		align-items: center;
-	}
-	.links-container--item{
-		font-size: 15px;
-	}
-	.button-contact{
-	margin-left:0;
-	margin-top: 40px;
-	}
-	.button{
-		font-size: 20px;
-		width: 290px;
-	}
-	.links{
-		padding-bottom: 100px;
-	}
-	.links-container{
-		display: block;
-	}
-	.links-container--item {
-    	margin-bottom: 20px;
-    	font-size: 20px;
-    }
-	.portfolio-link{
-		margin-bottom: 13px;
+	
+	.content {
 		margin-right: 0;
 	}
+	.content img{
+		width: 280px;
+	}
+	.card-description p {
+		font-size: 16px;
+	}
+	
 }
