--- a/main.css
+++ b/main.css
@@ -1,267 +1,320 @@
 html {
-	scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
-body{
-	background: #29292b;
-	font-family: 'Roboto Mono', monospace;
-	color: #aaa9a9;
+
+body {
+    background: #29292b;
+    font-family: 'Roboto Mono', monospace;
+    color: #aaa9a9;
 }
-header{
-	display: flex;
-	flex-direction: column;
-	justify-content:  center;
-	padding-top: 30px;
+
+p {
+    line-height: 22px;
 }
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 30px;
+}
+
 header img {
-	width: 200px;
-	border-radius: 50%;
-	margin-bottom: 20px;
+    width: 200px;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
+
 header a:hover {
-	color:#e7c860;
-}	
-.main-container{
-	max-width: 1440px;
-	margin: 0 auto;
-	background: #29292b;
+    color: #e7c860;
 }
-.main-title{
-	font-size: 30px;
-	margin-bottom: 30px;
-	color:#3df487;
-	text-align: center;
+
+.main-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    background: #29292b;
 }
-.logo{
-	display: flex;
-	justify-content: center;
+
+.main-title {
+    font-size: 30px;
+    margin-bottom: 30px;
+    color: #3df487;
+    text-align: center;
 }
-.description{
-	font-size: 16px;
-	line-height: 25px;
-	padding-right: 100px;
-	padding-left: 100px;
-	margin-bottom: 10px;
+
+.logo {
+    display: flex;
+    justify-content: center;
 }
-.description-code, .code {
-	color:#3df487;
+
+.description {
+    font-size: 16px;
+    line-height: 25px;
+    padding-right: 100px;
+    padding-left: 100px;
+    margin-bottom: 10px;
 }
+
+.description-code,
+.code {
+    color: #3df487;
+}
+
 .description-code span {
-	color:#d7d7d7;
+    color: #d7d7d7;
 }
+
 .code-body {
-	margin-left: 20px;
-	/* color:#d7d7d7; */
+    margin-left: 20px;
+    /* color:#d7d7d7; */
 }
+
 .link {
-	color:#e7c860;
-	text-decoration: none;
+    color: #e7c860;
+    text-decoration: none;
 }
 
 
 /* ----------- tabs ---------- */
 .container {
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
+
 .tab-content {
-	min-height: 40vh;
-	padding-right: 100px;
-	padding-left: 100px;
+    min-height: 40vh;
+    padding-right: 100px;
+    padding-left: 100px;
 }
+
 .tab-content-item {
-	width: 100%;
+    width: 100%;
 }
+
 .tab-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-width: 220px;
-	margin-right: 10px;
-	padding: 10px 5px;
-	font-size: 16px;
-	cursor: pointer;
-    background:#222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 220px;
+    margin-right: 10px;
+    padding: 10px 5px;
+    font-size: 16px;
+    cursor: pointer;
+    background: #222;
 }
+
 .active {
     background: #3df487;
 }
+
 .tab-content-item {
     display: none;
 }
+
 .show {
     display: block;
 }
 
 /*-------------- portfolio section---------------*/
-.portfolio{
-	width: 100%;
-	padding-bottom: 30px;
-}
-.portfolio-container{
-	display: flex;
-	flex-direction: column;	
-	margin: 0 auto;
-	width: 80%;
-	
-}
-.portfolio-link{
-	margin-right: 15px;
-	opacity: 0.5;
-	transition: 0.2s ease-out 0.1s;
-}
-.portfolio-link:last-child{
-	margin-right: 0;
-}
-.portfolio-link:hover{
-	opacity: 1;
-}
-.title{
-	font-size: 18px;
-	text-align: center;
-	margin: 40px 0 40px;
-	color:#d7d7d7;
+.portfolio {
+    width: 100%;
+    padding-bottom: 30px;
 }
 
-.tab-item.active{
-	color: #fff;
+.portfolio-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 80%;
+
 }
+
+.portfolio-link {
+    margin-right: 15px;
+    opacity: 0.5;
+    transition: 0.2s ease-out 0.1s;
+}
+
+.portfolio-link:last-child {
+    margin-right: 0;
+}
+
+.portfolio-link:hover {
+    opacity: 1;
+}
+
+.title {
+    font-size: 18px;
+    text-align: center;
+    margin: 40px 0 40px;
+    color: #d7d7d7;
+}
+
+.tab-item.active {
+    color: #fff;
+}
+
 .navlogo {
-	width: 30px;
-	height: 30px;
-	margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
 }
+
 /*-------------- card section ---------------*/
 .card {
-	margin-bottom: 30px;
-	max-width: 80%;
-}
-.card a {
-	min-height: 100px;
-    transition: 0.5s;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-    box-sizing: border-box;
-	text-decoration: none;
+    margin-bottom: 30px;
+    max-width: 80%;
 }
 
-.card-description h3{
-	color: #aaa9a9;
-	font-size: 17px;
+.card a {
+    margin: 20px 0;
+    transition: 0.5s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    text-decoration: none;
 }
+
+.card-description h3 {
+    color: #aaa9a9;
+    font-size: 17px;
+}
+
 .card-description p {
-	color: #aaa9a9;
+    color: #aaa9a9;
 }
+
 .content {
-	margin-right: 20px;
-	max-width: 150px;
-	max-height: 150px;
+    margin-right: 20px;
+    max-width: 150px;
+    min-width: 150px;
+    height: 150px;
     border-radius: 50%;
-	overflow: hidden;
+    overflow: hidden;
 }
-.content img{
-	display: block;
-	opacity: 0.3;
-	
-	
-	/* width: 200px;
+
+.content img {
+    display: block;
+    opacity: 0.3;
+
+
+    /* width: 200px;
 	height: 200px; */
 }
+
 /*-------------- portfolio section finish---------------*/
 
 @media only screen and (max-width : 992px) {
-	.main-container{
-		width:100%;
-		margin-bottom: 0px;
-		margin-top: 0px;
-		box-shadow: none;
-	}
-	.tabs .container {
-		display: block;
-		width: 50%;
-	}
-	.tab-item {
-		margin-bottom: 15px;
-	}
-	.card {
-		max-width: 100%;
-	}
+    .main-container {
+        width: 100%;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        box-shadow: none;
+    }
+
+    .tabs .container {
+        display: block;
+        width: 50%;
+    }
+
+    .tab-item {
+        margin-bottom: 15px;
+    }
+
+    .card {
+        max-width: 100%;
+    }
 }
 
-@media only screen and (max-width : 762px) {
-	.main-container{
-		width:100%;
-		margin-bottom: 0px;
-		margin-top: 0px;
-		box-shadow: none;
-	}
-	.main-title{
-		font-size: 25px;
-	}
-	.tab-content {
-		padding-left: 40px;
-		padding-right: 40px;
-	}
-	.tabs .container {
-		width: 80%;
-	}
+@media only screen and (max-width : 820px) {
+    .main-container {
+        width: 100%;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        box-shadow: none;
+    }
 
-	.card a {
-		display: flex;
-		flex-direction: column;
-	}
-	.card-description {
-		width: 100%;
-	}
-	.content {
-		order: -1;
-		margin: 0 auto;
-	}
-	.description{
-		font-size: 14px;
-		padding-right: 50px;
-		padding-left: 50px;
-	}
-	.title {
-		font-size: 20px;
-		margin: 40px 0 40px;
-	}
-	
+    .main-title {
+        font-size: 25px;
+    }
+
+    .tab-content {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .tabs .container {
+        width: 80%;
+    }
+
+    .card a {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-description {
+        width: 100%;
+    }
+
+    .content {
+        order: -1;
+        margin: 0 auto;
+    }
+
+    .description {
+        font-size: 14px;
+        padding-right: 50px;
+        padding-left: 50px;
+    }
+
+    .title {
+        font-size: 20px;
+        margin: 40px 0 40px;
+    }
+
 }
 
 @media only screen and (max-width : 480px) {
-	.main-container{
-		width:100%;
-		margin-bottom: 0px;
-		margin-top: 0px;
-	}
-	.description {
-		padding-right: 20px;
-		padding-left: 20px;
-	}
-	.title{
-		font-size: 20px;
-		text-align: center;
-		margin: 40px 0 40px;
-		color:#d7d7d7;
-	}
-	.tabs .container {
-		width: 90%;
-	}
-	.tab-content {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-	.content {
-		order: -1;
-		margin: 0 auto;
-	}
-	.content img{
-		width: 280px;
-	}
-	.card-description p {
-		font-size: 14px;
-	}
-	
+    .main-container {
+        width: 100%;
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
+
+    .description {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+
+    .title {
+        font-size: 20px;
+        text-align: center;
+        margin: 40px 0 40px;
+        color: #d7d7d7;
+    }
+
+    .tabs .container {
+        width: 90%;
+    }
+
+    .tab-content {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .content {
+        order: -1;
+        margin: 0 auto;
+    }
+
+    .content img {
+        width: 280px;
+    }
+
+    .card-description p {
+        font-size: 14px;
+    }
+
 }
